# meeting-ai

./: .env.example  .gitignore  RESEARCH-ai-meeting-agents.md  WORKFLOW.md  audio_capture.py  chat_handler.py  config.py  conversation.py  file_writer.py  library_context.py  library_search.py  media_stream.py  meeting.py  monitor.py  monitor_config.py  plus_one.py  pyproject.toml  server.py  suggestion_formatter.py  transcriber.py  transcript_mgr.py  twilio_caller.py  voice_responder.py  vtt_export.py
static/: app.js  index.html  style.css
tests/: test_conversation.py  test_diarization.py  test_file_writer.py  test_media_stream.py  test_meeting_cli.py  test_monitor.py  test_phase1.py  test_phase2.py  test_phase3.py  test_resilience.py  test_twilio_caller.py
