[project]
name = "meeting-ai"
version = "0.1.0"
description = "Real-time meeting transcription and AI assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "deepgram-sdk>=3.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio>=4.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
